Downgrade java for compile reasons and complications using the framework.